@@ -1,5 +1,7 @@
 2025-01-08  Zhengyi Fu  <i@fuzy.me>
 
+	* site-lisp/consult-xref-apropos.el: Adapt to consult 1.10.
+
 	* site-lisp/consult-browser-hist.el: Requires consult 1.10.
 	Truncate the titles if too long.
 	(consult-browser-hist-title-max-width): New user option.
